LogOutput/manifests/gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
        - name: config-volume
          configMap:
            name: logoutput-configmap
      containers:
        - name: log-writer
          image: gcr.io/dwk-gke-482214/log-writer:latest
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
        - name: log-reader
          image: gcr.io/dwk-gke-482214/log-reader:latest
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
            - name: config-volume
              mountPath: /usr/src/app/config
