LogOutput/manifests/gke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: exercises-route
spec:
  parentRefs:
  - name: exercises-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    backendRefs:
    - name: pingpong-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hashgenerator-svc
      port: 80
