LogOutput/manifests/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: exercises-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hashgenerator-svc
            port:
              number: 80
